# sales

./: .env.example  .env.prod.example  .gitignore  CORS_CONFIGURATION.md  Dockerfile  INTERACTION_LOGS.md  Makefile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  start.sh
.github/: copilot-instructions.md
app/: urls.py
app/settings/: base.py  dev.py  prod.py
core/: admin.py  models.py  routers.py  serializers.py  signals.py  urls.py  utils.py  views.py
core/management/commands/: assign_user_to_organization.py  create_organization.py
core/migrations/: 0001_initial.py  0002_alter_quotelineitem_unit_price.py  0003_organization_alter_lead_email_account_organization_and_more.py  0004_auto_20250710_0505.py
landing/: tailwind.config.ts
landing/app/: layout.tsx  page.tsx
scripts/: check_tables.py  create_admin.py  setup_db.py  test_db.py  test_interaction_signals.py  test_organization_registration.py  test_organization_validation.py
web-ui/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  next.config.js  next.config.mjs  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/app/accounts/: page.tsx
web-ui/app/contacts/: page.tsx
web-ui/app/customers/: page.tsx
web-ui/app/interactions/: page.tsx
web-ui/app/leads/: page.tsx
web-ui/app/login/: page.tsx
web-ui/app/opportunities/: page.tsx
web-ui/app/products/: page.tsx
web-ui/app/quotes/: page.tsx
web-ui/app/quotes/[id]/: page.tsx
web-ui/app/settings/: page.tsx
web-ui/app/tasks/: page.tsx
web-ui/client/: http-sales-client.ts
web-ui/components/: login-screen.tsx  no-organization-screen.tsx  register-screen.tsx
web-ui/components/forms/: product-form.tsx
web-ui/components/layout/: header.tsx  sidebar.tsx  theme-switcher.tsx
web-ui/components/tables/: accounts.tsx  contacts.tsx  customers.tsx  leads.tsx  opportunities.tsx  products.tsx  quotes.tsx  tasks.tsx
web-ui/lib/: auth.ts  mock-data.ts
web-ui/schema/: sales-cookbook-api.yaml
web-ui/types/: index.ts
